# ASE-Solutions

./: .gitignore  CMakeLists.txt  main.cpp
BST/: CMakeLists.txt  Dictionary.h  DictionaryTests.cpp  main.cpp
Dominoes/: CMakeLists.txt  DominoBenchmark.cpp  DominoUtils.h  Dominoes.cpp  Dominoes.h  DominoesAverageCase.cpp  DominoesAverageCase.h  DominoesCLI-B1.cpp  DominoesCLI-B2.cpp  DominoesCLI-C1.cpp  DominoesConvoluted.cpp  DominoesConvoluted.h  DominoesInterface.h  DominoesTests.cpp  DominoesWorstCase.cpp  DominoesWorstCase.h  benchmarkCreateLineTest.py  benchmarkFullTest.py  benchmarkGraphGen.py  main.cpp
Dominoes/dominoes-test_data/10/: 10-input-coloured.txt  10-input-uncoloured.txt  10-output-left_right_turns.txt  10-output-stepping_right.txt  10-starting-domino.txt
Dominoes/dominoes-test_data/100/: 100-input-coloured.txt  100-input-uncoloured.txt  100-output-left_right_turns.txt  100-output-stepping_right.txt  100-starting-domino.txt
Dominoes/dominoes-test_data/100K/: 100K-input-coloured.txt  100K-input-uncoloured.txt  100K-output-left_right_turns.txt  100K-output-stepping_right.txt  100K-starting-domino.txt
Dominoes/dominoes-test_data/10K/: 10K-input-coloured.txt  10K-input-uncoloured.txt  10K-output-left_right_turns.txt  10K-output-stepping_right.txt  10K-starting-domino.txt
Dominoes/dominoes-test_data/1K/: 1K-input-coloured.txt  1K-input-uncoloured.txt  1K-output-left_right_turns.txt  1K-output-stepping_right.txt  1K-starting-domino.txt
Dominoes/dominoes-test_data/1M/: 1M-starting-domino.txt
Dominoes/dominoes-test_data/30/: 30-input-coloured.txt  30-input-uncoloured.txt  30-output-left_right_turns.txt  30-output-stepping_right.txt  30-starting-domino.txt
Dominoes/dominoes-test_data/300/: 300-input-coloured.txt  300-input-uncoloured.txt  300-output-left_right_turns.txt  300-output-stepping_right.txt  300-starting-domino.txt
Dominoes/dominoes-test_data/300K/: 300K-starting-domino.txt
Dominoes/dominoes-test_data/30K/: 30K-input-coloured.txt  30K-input-uncoloured.txt  30K-output-left_right_turns.txt  30K-output-stepping_right.txt  30K-starting-domino.txt
Dominoes/dominoes-test_data/3K/: 3K-input-coloured.txt  3K-input-uncoloured.txt  3K-output-left_right_turns.txt  3K-output-stepping_right.txt  3K-starting-domino.txt
Dominoes/dominoes-test_data/60/: 60-input-coloured.txt  60-input-uncoloured.txt  60-output-left_right_turns.txt  60-output-stepping_right.txt  60-starting-domino.txt
Dominoes/dominoes-test_data/600/: 600-input-coloured.txt  600-input-uncoloured.txt  600-output-left_right_turns.txt  600-output-stepping_right.txt  600-starting-domino.txt
Dominoes/dominoes-test_data/600K/: 600K-starting-domino.txt
Dominoes/dominoes-test_data/60K/: 60K-input-coloured.txt  60K-input-uncoloured.txt  60K-output-left_right_turns.txt  60K-output-stepping_right.txt  60K-starting-domino.txt
Dominoes/dominoes-test_data/6K/: 6K-input-coloured.txt  6K-input-uncoloured.txt  6K-output-left_right_turns.txt  6K-output-stepping_right.txt  6K-starting-domino.txt
Dominoes/dominoes-test_data/example/: example-input-coloured.txt  example-input-uncoloured.txt  example-output-left_right_turns.txt  example-output-stepping_right.txt  example-starting-domino.txt
TimingTests/: CMakeLists.txt  KeyItemGenerator.cpp  KeyItemGenerator.h  TimingTests.cpp  timingGraphGen.py  timings.txt
Week1/: CMakeLists.txt  Coordinate.cpp  Coordinate.h  DynamicArray.cpp  DynamicArray.h  SinglyLinkedList.cpp  SinglyLinkedList.h  main.cpp  singlyLinkedList.cpp
Week2/: CMakeLists.txt  Dictionary.h  DictionaryTests.cpp  main.cpp
